[gd_scene load_steps=17 format=3 uid="uid://b3elxiu4kskig"]

[ext_resource type="Script" uid="uid://mi2ahgxyj567" path="res://Cudes/explosion.gd" id="1_aayv4"]

[sub_resource type="Curve" id="Curve_nlb0y"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_aayv4"]
curve = SubResource("Curve_nlb0y")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_aayv4"]
particle_flag_align_y = true
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 61.37
radial_velocity_min = 103.97
radial_velocity_max = 103.97
gravity = Vector3(0, 49, 0)
scale_max = 6.0
scale_curve = SubResource("CurveTexture_aayv4")

[sub_resource type="Gradient" id="Gradient_4okmj"]
colors = PackedColorArray(0.249306, 0.344981, 0.163886, 1, 0.585522, 0.771216, 0.422595, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k2xjm"]
gradient = SubResource("Gradient_4okmj")

[sub_resource type="Curve" id="Curve_bvnfy"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.245675, 3), 0.0, 0.0, 0, 0, Vector2(0.99998, 3), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_61lnk"]
curve = SubResource("Curve_bvnfy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a801j"]
lifetime_randomness = 1.0
particle_flag_align_y = true
particle_flag_rotate_y = true
particle_flag_disable_z = true
spread = 22.5
initial_velocity_min = 229.36
initial_velocity_max = 284.4
angular_velocity_min = 348.32
angular_velocity_max = 348.32
gravity = Vector3(0, 300, 0)
scale_max = 8.0
scale_curve = SubResource("CurveTexture_aayv4")
scale_over_velocity_curve = SubResource("CurveTexture_61lnk")
color_ramp = SubResource("GradientTexture1D_k2xjm")

[sub_resource type="Gradient" id="Gradient_14ogo"]
colors = PackedColorArray(0.164706, 0.0941176, 0.0823529, 1, 0.47005, 0.307655, 0.280394, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_48id1"]
gradient = SubResource("Gradient_14ogo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_h4yxj"]
lifetime_randomness = 1.0
particle_flag_align_y = true
particle_flag_rotate_y = true
particle_flag_disable_z = true
spread = 22.5
initial_velocity_min = 275.23
initial_velocity_max = 330.27
angular_velocity_min = 348.32
angular_velocity_max = 348.32
gravity = Vector3(0, 300, 0)
scale_max = 8.0
scale_curve = SubResource("CurveTexture_aayv4")
scale_over_velocity_curve = SubResource("CurveTexture_61lnk")
color_ramp = SubResource("GradientTexture1D_48id1")

[sub_resource type="Gradient" id="Gradient_a801j"]
colors = PackedColorArray(0.0923971, 0.0923971, 0.0923971, 1, 0.408329, 0.408329, 0.408329, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4okmj"]
gradient = SubResource("Gradient_a801j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k2xjm"]
lifetime_randomness = 1.0
particle_flag_align_y = true
particle_flag_rotate_y = true
particle_flag_disable_z = true
spread = 22.5
initial_velocity_min = 275.23
initial_velocity_max = 330.27
angular_velocity_min = 348.32
angular_velocity_max = 348.32
gravity = Vector3(0, 300, 0)
scale_max = 4.0
scale_curve = SubResource("CurveTexture_aayv4")
color_ramp = SubResource("GradientTexture1D_4okmj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nlb0y"]
particle_flag_align_y = true
particle_flag_rotate_y = true
particle_flag_disable_z = true
angle_min = -45.0
angle_max = 225.0
inherit_velocity_ratio = -0.2
initial_velocity_min = -27.52
initial_velocity_max = 27.52
radial_velocity_min = 36.69
radial_velocity_max = 36.69
gravity = Vector3(0, 49, 0)
scale_max = 4.0
scale_curve = SubResource("CurveTexture_aayv4")
color = Color(0.733333, 0, 0, 1)

[node name="Explosion" type="Node2D"]
script = ExtResource("1_aayv4")

[node name="Explode" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_aayv4")

[node name="EarthSlam" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, 64)
rotation = -1.5708
emitting = false
amount = 40
lifetime = 3.0
one_shot = true
speed_scale = 1.5
explosiveness = 0.99
process_material = SubResource("ParticleProcessMaterial_a801j")

[node name="EarthSlam2" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, 64)
rotation = -1.5708
emitting = false
amount = 40
lifetime = 3.0
one_shot = true
speed_scale = 1.5
explosiveness = 0.99
process_material = SubResource("ParticleProcessMaterial_h4yxj")

[node name="EarthSlam3" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, 64)
rotation = -1.5708
emitting = false
amount = 40
lifetime = 3.0
one_shot = true
speed_scale = 1.5
explosiveness = 0.99
process_material = SubResource("ParticleProcessMaterial_k2xjm")

[node name="Blood" type="GPUParticles2D" parent="."]
emitting = false
amount = 15
lifetime = 0.8
one_shot = true
explosiveness = 1.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_nlb0y")
